--- a/PatientRecordMVVM/Views/HomeCareMain.xaml
+++ b/PatientRecordMVVM/Views/HomeCareMain.xaml
@@ -7,6 +7,7 @@
         FontFamily="{materialDesign:MaterialDesignFont}"
         xmlns:local="clr-namespace:PatientRecordMVVM.Views"
         xmlns:vm ="clr-namespace:PatientRecordMVVM.ViewModels"
+        xmlns:controls ="clr-namespace:PatientRecordMVVM.Controls"
         mc:Ignorable="d"
         Title="HomeCareMain" Height="850" Width="1500" Foreground="White" ResizeMode="CanResizeWithGrip">
     <Window.DataContext>
@@ -54,17 +55,8 @@
         </Grid.RowDefinitions>
         
         <Image x:Name="Logo" Grid.Row="1" Grid.ColumnSpan="3"  Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Grid Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource GridShadow}" Height="60" VerticalAlignment="Top" Background="#1A365D">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="HOME CARE" FontSize="22" Foreground="#CEE8EC" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            </StackPanel>
-            <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Foreground="White" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
-                <StackPanel Width="150">
-                    <Button Content="Settings"/>
-                    <Separator/> 
-                    <Button Command="{Binding Path=LogoutCommand}" Content="Logout"/>
-                </StackPanel>
-            </materialDesign:PopupBox>
+        <Grid Grid.Row="0" Grid.ColumnSpan="3">
+            <controls:MainHeaderControl/>
         </Grid>
 
         <Grid x:Name="GridSideMenu" Grid.RowSpan="2" Grid.Column="0" Style="{StaticResource GridShadow}" Width="210" HorizontalAlignment="Left" Background="#1A365D">
@@ -91,12 +83,22 @@
             </StackPanel>
         </Grid>
 
-        <Grid Grid.Row="1" Grid.Column="1">
+        <Grid Grid.Row="1" Grid.ColumnSpan="3">
             <ContentControl 
                 x:Name="ContentDisplay" 
                 Content="{Binding SelectedViewModel}" 
-                Width="Auto"
+                HorizontalAlignment="Center"
+                Width="800"
                 Height="730"  
+                Margin="20,0,20,0"/>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="2">
+            <local:PrintPreviewControl
+                x:Name="PrintPreviewControl"
+                Width="Auto"
+                Height="730"
+                Visibility="Hidden"
                 Margin="20,0,20,0"/>
         </Grid>
     </Grid>
