--- a/PatientRecordMVVM/Views/PrintPreviewControl.xaml
+++ b/PatientRecordMVVM/Views/PrintPreviewControl.xaml
@@ -6,8 +6,9 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              FontFamily="{materialDesign:MaterialDesignFont}"
              xmlns:local="clr-namespace:PatientRecordMVVM.Views"
+             xmlns:controls ="clr-namespace:PatientRecordMVVM.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="700" d:DesignWidth="600" Background="#e2eaec" BorderBrush="#e2eaec">
+             d:DesignHeight="800" d:DesignWidth="730" Background="#e2eaec" BorderBrush="#e2eaec">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="22*"/>
@@ -23,40 +24,20 @@
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height ="1.5*"/>
-                <RowDefinition Height ="1.5*"/>
-                <RowDefinition Height ="6.5*"/>
+                <RowDefinition Height ="3*"/>
+                <RowDefinition Height ="6*"/>
                 <RowDefinition Height ="7*"/>
                 <RowDefinition Height ="6*"/>
             </Grid.RowDefinitions>
-
-            <Grid Grid.RowSpan="2" Grid.ColumnSpan="3" Background="#58af9d"/>
+            
             <Image x:Name="Logo" Grid.RowSpan="5" Grid.ColumnSpan="3"  Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.12" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="400" Height="400" Margin="0,150,0,0"/>
 
-            <!--Patient Id block-->
-            <StackPanel Grid.ColumnSpan="2" Style="{StaticResource StackpanelStyle}" Margin="5,5,5,5">
-                <Label FontSize="16" FontWeight="Bold" Foreground="White">
-                    Patient ID :
-                </Label>
-                <Label Content="{Binding PatientID}" FontSize="16" Foreground="White" Margin="5,0,0,0"/>
-            </StackPanel>
-
-            <!--Date block-->
-            <StackPanel Grid.ColumnSpan="3" Style="{StaticResource StackpanelStyle}" HorizontalAlignment="Right" Margin="5,5,5,5">
-                <Label FontSize="16" FontWeight="Bold" Foreground="White">
-                    Date :
-                </Label>
-                <Label Name="date_time" Content="{Binding PatientRegisteredDate}" FontSize="16" Foreground="White" Margin="5,0"/>
-            </StackPanel>
-
-            <!--Title block-->
-            <TextBlock Grid.Row="1" Grid.ColumnSpan="3" FontSize="20" FontWeight="Bold" Foreground="White" TextDecorations="Underline" HorizontalAlignment="Center" VerticalAlignment="Center">
-				Patient Registration Information
-            </TextBlock>
-
+            <Grid x:Name="Header" Grid.Row="0" Grid.ColumnSpan="3">
+                <controls:UserControlHeader/>
+            </Grid>
+            
             <!--Sub grid 1-->
-            <Grid Grid.Row="2" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="25,7,25,15">
-
+            <Grid Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Stretch" Margin="25,7,25,0">
                 <!--User's image View and name-->
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Ellipse Width="100" Height="100">
@@ -64,15 +45,15 @@
                             <ImageBrush x:Name="ImageViewer2" ImageSource="{Binding PatientImageSource}"/>
                         </Ellipse.Fill>
                     </Ellipse>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
-                        <Label Style="{StaticResource LabelStyles}" Margin="0">Patient Name :</Label>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
+                        <Label Style="{StaticResource LabelStyles}" FontSize="14" Margin="0">Patient Name :</Label>
                         <Label x:Name="ViewName" Content="{Binding PatientName}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
                 </StackPanel>
             </Grid>
 
             <!--Sub grid 2-->
-            <StackPanel Grid.Row="3" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Margin="25,-25,0,0">
+            <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch"  VerticalAlignment="Center" Margin="25,-5,0,0">
                 <TextBlock Style="{StaticResource TextBlockStyleControl}">Patient Personal Information</TextBlock>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -82,7 +63,7 @@
 
                     <Grid.RowDefinitions>
                         <RowDefinition Height="5*"/>
-                        <RowDefinition Height="3*" MaxHeight="80"/>
+                        <RowDefinition Height="3*"/>
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical" Margin="10,5">
@@ -110,7 +91,7 @@
             </StackPanel>
 
             <!--Sub grid 3-->
-            <StackPanel Grid.Row="4" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="25,0,25,0">
+            <StackPanel Grid.Row="3" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="25,5,0,0">
                 <TextBlock Style="{StaticResource TextBlockStyleControl}">Patient Medical Information</TextBlock>
                     <Grid>
                     <Grid.ColumnDefinitions>
@@ -128,7 +109,7 @@
                         <Label x:Name="ViewDepartment" Content="{Binding PatientDepartment}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
 
-                    <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="40,5,10,0">
+                    <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical" Margin="30,5,10,0">
                         <Label  Style="{StaticResource PreviewLabelStyles}">Doctor in Charge :</Label>
                         <Label x:Name="ViewWard" Content="{Binding PatientDotorcInCharge}" Style="{StaticResource LabelStyleControl}"/>
                     </StackPanel>
@@ -141,8 +122,9 @@
             </StackPanel>
         </Grid>
         <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,10,26,0">
-            <Button Command="{Binding Path=DefaultPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{StaticResource ButtonStyle}" Content="Default Print" Margin="0,0,5,0"/>
-            <Button Command="{Binding Path=ConfigureAndPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{StaticResource ButtonStyle}" Content="Configure Print"/>
+            <Button Command="{Binding Path=ConfigureAndPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{StaticResource ButtonStyle}" Content="Configure Print" Background="#58af9d" BorderBrush="#58af9d" Margin="0,0,8,0"/>
+            <Button Command="{Binding Path=DefaultPrintCommand}" CommandParameter="{Binding ElementName=MainSubGrid}" Style="{StaticResource ButtonStyle}" Content="Default Print" Background="#1A365D" BorderBrush="#1A365D"/>
+            
         </StackPanel>
     </Grid>
 </UserControl>
