--- a/PatientRecordMVVM/Controls/MainHeaderControl.xaml
+++ b/PatientRecordMVVM/Controls/MainHeaderControl.xaml
@@ -6,6 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              FontFamily="{materialDesign:MaterialDesignFont}"
              xmlns:local="clr-namespace:PatientRecordMVVM.Controls"
+             xmlns:language ="clr-namespace:PatientRecordMVVM.Resources"
              mc:Ignorable="d" 
              d:DesignHeight="60" d:DesignWidth="800" Background="White">
     
@@ -13,12 +14,13 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <TextBlock Text="HOME CARE" FontSize="22" Foreground="#CEE8EC" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </StackPanel>
-        <materialDesign:PopupBox PlacementMode="BottomAndAlignRightEdges" StaysOpen="False" Foreground="White" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
-            <StackPanel Width="150">
-                <Button Content="Settings"/>
-                <Separator/>
-                <Button Content="Logout"/>
-            </StackPanel>
-        </materialDesign:PopupBox>
+        <DockPanel HorizontalAlignment="Right" Height="31">
+            <Menu DockPanel.Dock="Top" Height="31" Background="#1A365D">
+                <MenuItem Header="{x:Static language:UILanguage.Language}" VerticalAlignment="Center" Foreground="#CEE8EC" FontSize="12">
+                    <MenuItem Name ="English" Header="_English-US" IsCheckable="True"  Click="English_Click"/>
+                    <MenuItem Name="Norwegian" Header="_Norwegian" IsCheckable="True"  Click="Norwegian_Click"/>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
     </Grid>
 </UserControl>
