--- a/PatientRecordMVVM/Views/AddPatientRecordDetailsControl.xaml
+++ b/PatientRecordMVVM/Views/AddPatientRecordDetailsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PatientRecordMVVM.Views.AddPatientRecordDetails"
+﻿<UserControl x:Class="PatientRecordMVVM.Views.AddPatientRecordDetailsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -103,7 +103,7 @@
             <Label Grid.Row="4" Grid.Column="1" Style="{StaticResource LabelStyles}">Image</Label>
             <Label Grid.Row="4" Grid.Column="1" Style="{StaticResource LabelStyles}" Margin="130,0,0,0">:</Label>
             <DockPanel Grid.Row="4" Grid.Column="2" LastChildFill="True" VerticalAlignment="Center" MinHeight="30">
-                <Button DockPanel.Dock="Left" Command="{Binding Path=GetPatientImageCommand, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource ButtonStyle}" Background="#58af9d" BorderBrush="#58af9d" Content="Browse"  Margin="0,0,8,0"/>
+                <Button DockPanel.Dock="Left" Command="{Binding Path=GetPatientImageCommand, UpdateSourceTrigger=PropertyChanged}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Background="#58af9d" BorderBrush="#58af9d" Content="Browse" Width="120"  Margin="0,0,8,0"/>
                 <TextBox Name="FileBrowser" DockPanel.Dock="Right" Text="{Binding Path= PatientImageSource}" Style="{StaticResource TextBoxStyle}" HorizontalAlignment="Stretch"/>
             </DockPanel>
 
@@ -128,9 +128,8 @@
 
         <!--Buttons Section-->
         <StackPanel Grid.Row="2" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="20,10,26,0" >
-            <Button Click="ButtonCancel" Style="{StaticResource ButtonStyle}" Background="#58af9d" BorderBrush="#58af9d" Content="Cancel" Margin="0,0,8,0"/>
-            <Button Command="{Binding Path=ClearPatientCommand}" Style="{StaticResource ButtonStyle}" Background="#58af9d" BorderBrush="#58af9d" Content="Clear" Margin="0,0,8,0"/>
-            <Button Command="{Binding Path=PreviewCommand}" Style="{StaticResource ButtonStyle}" Background="#1A365D" BorderBrush="#1A365D" Content="Print Preview"/>
+            <Button Command="{Binding Path=ClearPatientCommand}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Background="#58af9d" BorderBrush="#58af9d" Content="Clear" Width="120" Margin="0,0,8,0"/>
+            <Button Command="{Binding Path=PreviewCommand}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" FontWeight="Normal" Background="#1A365D" BorderBrush="#1A365D" Content="Print Preview" Width="120"/>
         </StackPanel>
     </Grid>
 </UserControl>
