--- a/PatientRecordMVVM/Views/HomeCareMainWindow.xaml
+++ b/PatientRecordMVVM/Views/HomeCareMainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PatientRecordMVVM.Views.HomeCareMain"
+﻿<Window x:Class="PatientRecordMVVM.Views.HomeCareMainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,15 +8,16 @@
         xmlns:local="clr-namespace:PatientRecordMVVM.Views"
         xmlns:vm ="clr-namespace:PatientRecordMVVM.ViewModels"
         xmlns:controls ="clr-namespace:PatientRecordMVVM.Controls"
+        xmlns:lang ="clr-namespace:PatientRecordMVVM.Resources"
         mc:Ignorable="d"
-        Title="HomeCareMain" Height="850" Width="1500" Foreground="White" ResizeMode="CanResizeWithGrip">
+        Height="850" Width="1500" Foreground="White">
     <Window.DataContext>
         <vm:HomeCareMainViewModel/>
     </Window.DataContext>
 
     <Window.Resources>
-        <DataTemplate DataType="{x:Type vm:PatientRecordDetailsViewModel}">
-            <local:AddPatientRecordDetails/>
+        <DataTemplate DataType="{x:Type vm:AddPatientRecordDetailsViewModel}">
+            <local:AddPatientRecordDetailsControl/>
         </DataTemplate>
         
         <Storyboard x:Key="MenuOpen">
@@ -41,20 +42,20 @@
             <BeginStoryboard Storyboard="{StaticResource MenuClose}"/>
         </EventTrigger>
     </Window.Triggers>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2.6*"/>
             <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="8*"/>
-            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="13*"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
-            <RowDefinition Height="25*"/>
+            <RowDefinition Height="20*"/>
         </Grid.RowDefinitions>
-        
-        <Image x:Name="Logo" Grid.Row="1" Grid.ColumnSpan="3"  Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+
+        <Image x:Name="Logo" Grid.Row="1" Grid.Column="2"  Source="/PatientRecordMVVM;component/Images/logo.jpg" Opacity="0.12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Grid Grid.Row="0" Grid.ColumnSpan="3">
             <controls:MainHeaderControl/>
         </Grid>
@@ -72,10 +73,10 @@
                 </Grid>
                 <ListView Foreground="White" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,50,0,0">
                     <ListViewItem Height="60" HorizontalAlignment="Center">
-                        <Button Command="{Binding Path=AddPatientCommand}" CommandParameter="{Binding ElementName=AddPatient}" Background="#58af9d" BorderBrush="#58af9d" Width="190" Height="40" VerticalAlignment="Top">
+                        <Button Command="{Binding Path=AddPatientCommand}" Style="{DynamicResource MaterialDesignRaisedLightButton}" Foreground="White" Background="#58af9d" BorderBrush="#58af9d" Width="190" Height="40" VerticalAlignment="Top">
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                 <materialDesign:PackIcon Kind="Add" Foreground="White" Width="25" Height="25" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="-5,0,20,0"/>
-                                <TextBlock Text="Add Patient Details" FontSize="13.5" VerticalAlignment="Center"/>
+                                <TextBlock Text="{x:Static lang:UILanguage.AddPatient}" FontSize="13.5" VerticalAlignment="Center"/>
                             </StackPanel>
                         </Button>
                     </ListViewItem>
@@ -83,7 +84,38 @@
             </StackPanel>
         </Grid>
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="3">
+        <Grid x:Name="GridCard" Grid.Row="1" Grid.Column="1">
+            <materialDesign:Card HorizontalAlignment="Center" VerticalAlignment="Center" Background="White" Width="210" Height="730" Margin="0,10">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Stretch">
+                    <Button x:Name="ButtonAnalytics" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,10">
+                        <StackPanel Orientation="Vertical">
+                            <materialDesign:PackIcon Kind="GoogleAnalytics" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                            <TextBlock Text="{x:Static lang:UILanguage.Analytics}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                        </StackPanel>
+                    </Button>
+                    <Button x:Name="ButtonReports" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,10">
+                        <StackPanel Orientation="Vertical">
+                            <materialDesign:PackIcon Kind="Book" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                            <TextBlock Text="{x:Static lang:UILanguage.Reports}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                        </StackPanel>
+                    </Button>
+                    <Button x:Name="ButtonEmployee" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,10">
+                        <StackPanel Orientation="Vertical">
+                            <materialDesign:PackIcon Kind="ClipboardList" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                            <TextBlock Text="{x:Static lang:UILanguage.EmpList}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                        </StackPanel>
+                    </Button>
+                    <Button x:Name="ButtonEquipments" Width="150" Height="150" Background="#CEE8EC" BorderBrush="#CEE8EC" Margin="0,20,0,0">
+                        <StackPanel Orientation="Vertical">
+                            <materialDesign:PackIcon Kind="TestTube" Foreground="#1A365D" Width="60" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                            <TextBlock Text="{x:Static lang:UILanguage.EquipList}" FontSize="16" FontWeight="Medium" Foreground="#1A365D" Margin="0,20,0,0"/>
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+            </materialDesign:Card>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="2">
             <ContentControl 
                 x:Name="ContentDisplay" 
                 Content="{Binding SelectedViewModel}" 
@@ -93,13 +125,5 @@
                 Margin="20,0,20,0"/>
         </Grid>
 
-        <Grid Grid.Row="1" Grid.Column="2">
-            <local:PrintPreviewControl
-                x:Name="PrintPreviewControl"
-                Width="Auto"
-                Height="730"
-                Visibility="Hidden"
-                Margin="20,0,20,0"/>
-        </Grid>
     </Grid>
 </Window>
